add new api getuser
